# Task-Manager

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  Utils.cpp  Utils.h  main.cpp
Test/: TestingGettersFunction.txt
